--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
 
   <body class="d-md-flex">
-    <main>
-      <div class="center-content">
-        <h1 class="title">Full-stack developper</h1>
+    <main class="d-md-flex flex-column justify-content-center">
+      <div class="about-content">
+        <h1 class="title font-weight-bold">Developer. <br>Full-stack. <br>Passionate.<br>Creative.</h1>
         <p class="description">
           Currently designing @Uber. Formerly Experience Design Director @GoPro
           and Interactive Director @Focus Lab. Follow my work, words and photos
@@ -24,13 +24,14 @@
         </p>
         <div class="social-links">
           <ul class="d-flex justify-content-start">
-            <li><a href=""><img src="https://img.icons8.com/ios/30/000000/linkedin.png"/></a></li>
-            <li><a href=""><img src="https://img.icons8.com/ios/30/000000/facebook-new.png"/></a></li>
-            <li><a href=""><img src="https://img.icons8.com/fluent/30/000000/github.png"/></a></li>
-            <li><a href=""><img src="https://img.icons8.com/ios/30/000000/twitter.png"/></a></li>
+            <li><a href=""><img src="https://img.icons8.com/color/31/000000/linkedin.png"/></a></li>
+            <li><a href=""><img src="https://img.icons8.com/color/31/000000/github--v1.png"/></a></li>
+            <!-- <img src="https://img.icons8.com/fluent/48/000000/github.png"/> -->
+            <li><a href=""><img src="https://img.icons8.com/fluent/31/000000/twitter.png"/></a></li>
+            <li><a href=""><img src="https://img.icons8.com/cute-clipart/31/000000/facebook-new.png"/></a></li>
           </ul>
         </div>
-        <a href="ericmbouwe@gmail.com">Say hello</a>
+        <a class="hello-btn d-block" href="ericmbouwe@gmail.com">Say hello!</a>
       </div>
     </main>
 
