removed height from main section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="d-md-flex">
     <main class="d-md-flex flex-column justify-content-center">
       <div class="about-content">
-        <h1 class="title font-weight-bold">Developer. <br>Full-stack. <br>Passionate.<br>Creative.</h1>
+        <h1 class="title font-weight-bold">Full-stack<br>Developer. <br>Passionate<br>&Creative.</h1>
         <p class="description">
           Currently designing @Uber. Formerly Experience Design Director @GoPro
           and Interactive Director @Focus Lab. Follow my work, words and photos
@@ -26,7 +26,7 @@
           <ul class="d-flex justify-content-start">
             <li><a href=""><img src="https://img.icons8.com/color/31/000000/linkedin.png"/></a></li>
             <li><a href=""><img src="https://img.icons8.com/color/31/000000/github--v1.png"/></a></li>
-            <!-- <img src="https://img.icons8.com/fluent/48/000000/github.png"/> -->
+            <!-- <li><a href=""><img src="https://img.icons8.com/fluent/31/000000/github.png"/></a></li> -->
             <li><a href=""><img src="https://img.icons8.com/fluent/31/000000/twitter.png"/></a></li>
             <li><a href=""><img src="https://img.icons8.com/cute-clipart/31/000000/facebook-new.png"/></a></li>
           </ul>
@@ -41,6 +41,7 @@
         <img src="" alt="" class="picture" />
         <div class="captions">
           <p class="project-name">Wotchd</p>
+          <p>description of the project/ stack used</p>
           <div class="project-links">
             <a href="" class="live"></a>
             <a href="" class="github"></a>
@@ -91,7 +92,9 @@
       </section>
 
       <footer>
+        <p>contatc form</p>
         <small>&copy;2020 Eric Mbouwe</small>
+        <a href="https://icons8.com/icon/13930/linkedin">Icons by Icons8</a>
       </footer>
     </aside>
 
