shaddow added to icons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href=""><img src="https://img.icons8.com/color/31/000000/github--v1.png"/></a></li>
             <!-- <li><a href=""><img src="https://img.icons8.com/fluent/31/000000/github.png"/></a></li> -->
             <li><a href=""><img src="https://img.icons8.com/fluent/31/000000/twitter.png"/></a></li>
-            <li><a href=""><img src="https://img.icons8.com/cute-clipart/31/000000/facebook-new.png"/></a></li>
+            <!-- <li><a href=""><img src="https://img.icons8.com/cute-clipart/31/000000/facebook-new.png"/></a></li> -->
           </ul>
         </div>
         <a class="hello-btn d-block" href="ericmbouwe@gmail.com">Say hello!</a>
