sections for projects added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </main>
 
     <aside>
-      <section class="project-mobile">
+      <section class="project-mobile blue-sec">
         <small class="order">001</small>
         <img src="" alt="" class="picture" />
         <div class="captions">
@@ -49,7 +49,7 @@
         </div>
       </section>
 
-      <section class="project-mac">
+      <section class="project-mac red-sec">
         <small class="order">002</small>
         <img src="" alt="" class="picture" />
         <div class="captions">
@@ -61,7 +61,7 @@
         </div>
       </section>
 
-      <section class="project-mac">
+      <section class="project-mac grey-sec">
         <small class="order">003</small>
         <img src="" alt="" class="picture" />
         <div class="captions">
@@ -73,7 +73,7 @@
         </div>
       </section>
 
-      <section class="project-mac">
+      <section class="project-mac green-sec">
         <small class="order">004</small>
         <img src="" alt="" class="picture" />
         <div class="captions">
