added images to projects

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
           <ul class="d-flex justify-content-start">
             <li><a href=""><img src="https://img.icons8.com/color/31/000000/linkedin.png"/></a></li>
             <li><a href=""><img src="https://img.icons8.com/color/31/000000/github--v1.png"/></a></li>
-            <!-- <li><a href=""><img src="https://img.icons8.com/fluent/31/000000/github.png"/></a></li> -->
             <li><a href=""><img src="https://img.icons8.com/fluent/31/000000/twitter.png"/></a></li>
-            <!-- <li><a href=""><img src="https://img.icons8.com/cute-clipart/31/000000/facebook-new.png"/></a></li> -->
           </ul>
         </div>
         <a class="hello-btn d-block" href="ericmbouwe@gmail.com">Say hello!</a>
@@ -36,10 +34,13 @@
     </main>
 
     <aside>
-      <section class="project-mobile blue-sec">
-        <small class="order">001</small>
-        <img src="" alt="" class="picture" />
-        <div class="captions">
+      <section class="project-mobile blue-sec d-md-flex align-items-center">
+        <div class="image d-flex flex-column">
+          <small class="order d-block">.001</small>
+          <img src="assets/images/muck11.png" alt="" class="img-fluid align-self-end" />
+        </div>
+    
+        <div class="project-desc pl-4">
           <p class="project-name">Wotchd</p>
           <p>description of the project/ stack used</p>
           <div class="project-links">
@@ -49,11 +50,15 @@
         </div>
       </section>
 
-      <section class="project-mac red-sec">
-        <small class="order">002</small>
-        <img src="" alt="" class="picture" />
-        <div class="captions">
+      <section class="project-mac d-md-flex red-sec align-items-center">
+         <div class="image">
+          <small class="order d-block">.002</small>
+          <img src="assets/images/muck8.png" alt="" class="img-fluid" />
+        </div>
+    
+        <div class="project-desc">
           <p class="project-name">Mapaan</p>
+          <p>description of the project/ stack used</p>
           <div class="project-links">
             <a href="" class="live"></a>
             <a href="" class="github"></a>
