--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <section class="project-mobile blue-sec d-md-flex align-items-center">
         <div class="image d-flex flex-column">
           <small class="order d-block">.001</small>
-          <img src="assets/images/muck11.png" alt="" class="img-fluid align-self-end" />
+          <img src="assets/images/muck11.png" alt="" class="img-fluid align-self-md-end" />
         </div>
     
         <div class="project-desc pl-4">
