--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <img src="assets/images/muck11.png" alt="" class="img-fluid align-self-md-end" />
         </div>
     
-        <div class="project-desc pl-4">
+        <div class="project-desc pl-md-4 pt-2">
           <p class="project-name">Wotchd</p>
           <p>description of the project/ stack used</p>
           <div class="project-links">
@@ -56,7 +56,7 @@
           <img src="assets/images/muck8.png" alt="" class="img-fluid" />
         </div>
     
-        <div class="project-desc">
+        <div class="project-desc pt-2">
           <p class="project-name">Mapaan</p>
           <p>description of the project/ stack used</p>
           <div class="project-links">
