--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </section>
 
       <footer>
-        <p>contatc form</p>
+        <p>contact form</p>
         <small>&copy;2020 Eric Mbouwe</small>
         <a href="https://icons8.com/icon/13930/linkedin">Icons by Icons8</a>
       </footer>
