--- a/index.html
+++ b/index.html
@@ -20,33 +20,33 @@
           Full-stack<br />Developer. <br />Passionate<br />&Creative.
         </h1>
         <p class="description">
-          Hi! My name is Eric Mbouwe, earlier in the beginning of my programming
-          journey I was a <span class="keyword">@self </span> taugh programmer, Today I am much better and more
-          accomplished. I am a problem solver and my <span class="keyword">@mission</span> is to provide the
-          best <span class="keyword">@code</span class="keyword"> and the best <span class="keyword">@behaviour</span> that any company could need.<br/>
+          Hi! My name is Eric Mbouwe, earlier at the beginning of my programming
+          journey I was a <span class="keyword"><b>@self-taugh</b></span> programmer, Today I am much better and more
+          accomplished. I am a problem solver and my <span class="keyword"><b>@mission</b></span> is to provide the
+          best <span class="keyword"><b>@code</b></span class="keyword"> and the best <span class="keyword"><b>@behaviour</b></span> that any company could need.<br/>
           Follow my work, words and photos below. 
         </p>
         <div class="social-links">
           <ul class="d-flex justify-content-start">
             <li>
-              <a href=""
+              <a href="https://www.linkedin.com/in/ericmbouwe/"
                 ><img src="https://img.icons8.com/color/32/000000/linkedin.png"
               /></a>
             </li>
             <li>
-              <a href=""
+              <a href="https://github.com/EricMbouwe"
                 ><img
                   src="https://img.icons8.com/color/32/000000/github--v1.png"
               /></a>
             </li>
             <li>
-              <a href=""
+              <a href="https://twitter.com/EricMbouwe"
                 ><img src="https://img.icons8.com/fluent/32/000000/twitter.png"
               /></a>
             </li>
           </ul>
         </div>
-        <a class="hello-btn d-block" href="ericmbouwe@gmail.com">Say hello!</a>
+        <a class="hello-btn d-block" href="#contact">Get in Touch!</a>
       </div>
     </main>
 
@@ -120,15 +120,37 @@
       </section>
 
       <section class="articles">
-        <h3 class="articles">Articles</h3>
+        <h4 class="articles">Articles</h4>
         <small class="article_date">20/05/2020</small>
         <a href="" class="article_title">CSS, take control</a>
       </section>
 
       <footer>
-        <p>contact form</p>
-        <small>&copy;2020 Eric Mbouwe</small>
-        <a href="https://icons8.com/icon/13930/linkedin">Icons by Icons8</a>
+        <div id="contact" class="p-3">
+          <h4>GET IN TOUCH</h4>
+
+          <form class="mb-2">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Name" id="name" aria-describedby="namelHelp">
+            </div>
+
+            <div class="form-group">
+              <input type="email" class="form-control" placeholder="Email" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+
+            <div class="form-group">
+              <textarea class="form-control" placeholder="Message" id="exampleFormControlTextarea1" rows="4"></textarea>
+            </div>
+        
+            <button type="submit" class="btn btn-primary">Send</button>
+          </form>
+        </div>
+
+        <div class="footer-bottom grey-sec text-white text-center p-2">
+          <small>&copy;2020 Eric Mbouwe.</small>
+          <small><a href="https://icons8.com/icon/13930/linkedin">Icons by Icons8</a></small>
+        </div>
+      
       </footer>
     </aside>
 
