remove section article

--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         </div>
       </section>
 
-      <section class="articles">
+      <!-- <section class="articles">
         <h4 class="articles">Articles</h4>
         <small class="article_date">20/05/2020</small>
         <a href="" class="article_title">CSS, take control</a>
-      </section>
+      </section> -->
 
       <footer>
         <div id="contact" class="p-3">
