--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </main>
 
     <aside>
-      <section class="project-mobile green-sec d-md-flex align-items-center vh-100">
+      <section class="project-mobile green-sec d-md-flex align-items-center project-1">
         <div class="image d-flex flex-column">
           <small class="order d-block">.001</small>
           <img
