images size changed

--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
     </main>
 
     <aside>
-      <section class="project-mobile green-sec d-md-flex align-items-center project-1">
+      <section class="project-mobile green-sec d-md-flex align-items-center">
         <div class="image d-flex flex-column">
           <small class="order d-block">.001</small>
           <img
             src="assets/images/muck11.png"
             alt=""
-            class="img-fluid align-self-md-end"
+            class="img-fluid"
           />
         </div>
 
-        <div class="project-desc pl-md-4 pt-2">
+        <div class="project-desc">
           <p class="project-name">Wotchd</p>
           <p class="m-0">description of the project/ stack used</p>
           <div class="project-links">
@@ -77,7 +77,7 @@
           <img src="assets/images/muck8.png" alt="" class="img-fluid" />
         </div>
 
-        <div class="project-desc pt-2">
+        <div class="project-desc">
           <p class="project-name">Mapaan</p>
           <p class="m-0">description of the project/ stack used</p>
           <div class="project-links">
@@ -93,7 +93,7 @@
           <img src="assets/images/muck8.png" alt="" class="img-fluid" />
         </div>
 
-        <div class="project-desc pt-2">
+        <div class="project-desc">
           <p class="project-name">Linter</p>
           <p class="m-0">description of the project/ stack used</p>
           <div class="project-links">
@@ -109,7 +109,7 @@
           <img src="assets/images/muck8.png" alt="" class="img-fluid" />
         </div>
 
-        <div class="project-desc pt-2">
+        <div class="project-desc">
           <p class="project-name">Newsweek</p>
           <p class="m-0">description of the project/ stack used</p>
           <div class="project-links">
