contact form added

--- a/index.html
+++ b/index.html
@@ -1,173 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Portfolio</title>
-  </head>
 
-  <body class="d-md-flex">
-    <main class="">
-      <div class="about-content">
-        <h1 class="title font-weight-bold">
-          Full-stack<br />Developer. <br />Passionate<br />&Creative.
-        </h1>
-        <p class="description">
-          Hi! My name is Eric Mbouwe, earlier at the beginning of my programming
-          journey I was a <span class="keyword"><b>@self-taugh</b></span> programmer, Today I am much better and more
-          accomplished. I am a problem solver and my <span class="keyword"><b>@mission</b></span> is to provide the
-          best <span class="keyword"><b>@code</b></span class="keyword"> and the best <span class="keyword"><b>@behaviour</b></span> that any company could need.<br/>
-          Follow my work, words and photos below. 
-        </p>
-        <div class="social-links">
-          <ul class="d-flex justify-content-start">
-            <li>
-              <a href="https://www.linkedin.com/in/ericmbouwe/"
-                ><img src="https://img.icons8.com/color/32/000000/linkedin.png"
-              /></a>
-            </li>
-            <li>
-              <a href="https://github.com/EricMbouwe"
-                ><img
-                  src="https://img.icons8.com/color/32/000000/github--v1.png"
-              /></a>
-            </li>
-            <li>
-              <a href="https://twitter.com/EricMbouwe"
-                ><img src="https://img.icons8.com/fluent/32/000000/twitter.png"
-              /></a>
-            </li>
-          </ul>
-        </div>
-        <a class="hello-btn d-block" href="#contact">Get in Touch!</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css" />
+  <title>Portfolio</title>
+</head>
+
+<body class="d-md-flex">
+  <main class="">
+    <div class="about-content">
+      <h1 class="title font-weight-bold">
+        Full-stack<br />Developer. <br />Passionate<br />&Creative.
+      </h1>
+      <p class="description">
+        Hi! My name is Eric Mbouwe, earlier at the beginning of my programming
+        journey I was a <span class="keyword"><b>@self-taugh</b></span> programmer, Today I am much better and more
+        accomplished. I am a problem solver and my <span class="keyword"><b>@mission</b></span> is to provide the
+        best <span class="keyword"><b>@code</b></span class="keyword"> and the best <span
+          class="keyword"><b>@behaviour</b></span> that any company could need.<br />
+        Follow my work, words and photos below.
+      </p>
+      <div class="social-links">
+        <ul class="d-flex justify-content-start">
+          <li>
+            <a href="https://www.linkedin.com/in/ericmbouwe/"><img
+                src="https://img.icons8.com/color/32/000000/linkedin.png" /></a>
+          </li>
+          <li>
+            <a href="https://github.com/EricMbouwe"><img
+                src="https://img.icons8.com/color/32/000000/github--v1.png" /></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/EricMbouwe"><img
+                src="https://img.icons8.com/fluent/32/000000/twitter.png" /></a>
+          </li>
+        </ul>
       </div>
-    </main>
+      <a class="hello-btn d-block" href="#contact">Get in Touch!</a>
+    </div>
+  </main>
 
-    <aside>
-      <section class="project-mobile green-sec d-md-flex align-items-center">
-        <div class="image d-flex flex-column">
-          <small class="order d-block">.001</small>
-          <img
-            src="assets/images/muck11.png"
-            alt=""
-            class="img-fluid"
-          />
+  <aside>
+    <section class="project-mobile blue-sec d-md-flex align-items-center">
+      <div class="image d-flex flex-column">
+        <small class="order d-block">.001</small>
+        <img src="assets/images/muck11.png" alt="" class="img-fluid" />
+      </div>
+
+      <div class="project-desc pl-md-3">
+        <h4 class="project-name">Wotchd</h4>
+        <p class="m-0">Wotchd is an app that helps you to collect your hours spent on watching your entertainement TV
+          Shows. It is developed entirely with Ruby on Rails using a custum
+          Authentication system, RSpec for Tests and AWS S3 for image storage with Active Storage, Bootstrap 4 for the
+          UI.</p>
+        <div class="project-links">
+          <a href="" class="live">Demo</a>
+          <span>|</span>
+          <a href="" class="github">Github</a>
         </div>
+      </div>
+    </section>
 
-        <div class="project-desc">
-          <p class="project-name">Wotchd</p>
-          <p class="m-0">description of the project/ stack used</p>
-          <div class="project-links">
-            <a href="" class="live"></a>
-            <a href="" class="github"></a>
+    <section class="project-mac d-md-flex red-sec align-items-center">
+      <div class="image">
+        <small class="order d-block">.002</small>
+        <img src="assets/images/muck8.png" alt="" class="img-fluid" />
+      </div>
+
+      <div class="project-desc">
+        <h4 class="project-name">Mapaan</h4>
+        <p class="m-0">Mapaan is an online tool that allow people to find their favorite event that they can attend.It
+          is
+          developed with HTML5 and CSS.</p>
+        <div class="project-links">
+          <a href="" class="live">Demo</a>
+          <span>|</span>
+          <a href="" class="github">Github</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="project-mac d-md-flex grey-sec align-items-center">
+      <div class="image">
+        <small class="order d-block">.003</small>
+        <img src="assets/images/muck8.png" alt="" class="img-fluid" />
+      </div>
+
+      <div class="project-desc">
+        <h4 class="project-name">Linter</h4>
+        <p class="m-0">A tool that allows a beginner to check some syntax errors in a code written in Ruby (.rb files).
+          Build with Ruby and RSpec for tests.
+        </p>
+        <!-- <p><span>Ruby</span>
+            <span>|</span>
+            <span>RSpec</span></p> -->
+        <div class="project-links">
+          <a href="" class="live">Demo</a>
+          <span>|</span>
+          <a href="" class="github">Github</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="project-mac d-md-flex green-sec align-items-center">
+      <div class="image">
+        <small class="order d-block">.004</small>
+        <img src="assets/images/muck8.png" alt="" class="img-fluid" />
+      </div>
+
+      <div class="project-desc">
+        <h4 class="project-name">Newsweek</h4>
+        <p class="m-0">A clone of The Newsweek homepage build from scratch with HTML & CSS and Bootstrap 4</p>
+        <div class="project-links">
+          <a href="" class="live">Demo</a>
+          <span>|</span>
+          <a href="" class="github">Github</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="articles p-md-5">
+      <h4 class="articles font-weight-bold mb-4">ARTICLES</h4>
+      <hr>
+      <small class="article_date d-block">20/05/2020</small>
+      <a href="" class="article_title text-black">CSS, take control</a>
+      <hr>
+    </section>
+
+    <footer>
+      <div id="contact" class="p-4 p-md-5">
+        <h4 class="font-weight-bold mb-4">GET IN TOUCH</h4>
+
+        <form class="mb-2">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Name" id="name" aria-describedby="namelHelp">
           </div>
-        </div>
-      </section>
 
-      <section class="project-mac d-md-flex red-sec align-items-center">
-        <div class="image">
-          <small class="order d-block">.002</small>
-          <img src="assets/images/muck8.png" alt="" class="img-fluid" />
-        </div>
-
-        <div class="project-desc">
-          <p class="project-name">Mapaan</p>
-          <p class="m-0">description of the project/ stack used</p>
-          <div class="project-links">
-            <a href="" class="live"></a>
-            <a href="" class="github"></a>
+          <div class="form-group">
+            <input type="email" class="form-control" placeholder="Email" id="exampleInputEmail1"
+              aria-describedby="emailHelp">
           </div>
-        </div>
-      </section>
 
-      <section class="project-mac d-md-flex grey-sec align-items-center">
-        <div class="image">
-          <small class="order d-block">.003</small>
-          <img src="assets/images/muck8.png" alt="" class="img-fluid" />
-        </div>
-
-        <div class="project-desc">
-          <p class="project-name">Linter</p>
-          <p class="m-0">description of the project/ stack used</p>
-          <div class="project-links">
-            <a href="" class="live"></a>
-            <a href="" class="github"></a>
+          <div class="form-group">
+            <textarea class="form-control" placeholder="Message" id="exampleFormControlTextarea1" rows="4"></textarea>
           </div>
-        </div>
-      </section>
 
-      <section class="project-mac d-md-flex green-sec align-items-center">
-        <div class="image">
-          <small class="order d-block">.004</small>
-          <img src="assets/images/muck8.png" alt="" class="img-fluid" />
-        </div>
+          <button type="submit" class="hello-btn border-0 m-0">Send</button>
+        </form>
+      </div>
 
-        <div class="project-desc">
-          <p class="project-name">Newsweek</p>
-          <p class="m-0">description of the project/ stack used</p>
-          <div class="project-links">
-            <a href="" class="live"></a>
-            <a href="" class="github"></a>
-          </div>
-        </div>
-      </section>
+      <div class="footer-bottom grey-sec text-white text-center p-3">
+        <small>&copy;2020 Eric Mbouwe.</small>
+        <small><a href="https://icons8.com/icon/13930/linkedin">Icons by Icons8</a></small>
+      </div>
 
-      <section class="articles p-3">
-        <h4 class="articles">Articles</h4>
-        <small class="article_date">20/05/2020</small>
-        <a href="" class="article_title">CSS, take control</a>
-      </section>
+    </footer>
+  </aside>
 
-      <footer>
-        <div id="contact" class="p-3">
-          <h4>GET IN TOUCH</h4>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+</body>
 
-          <form class="mb-2">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Name" id="name" aria-describedby="namelHelp">
-            </div>
-
-            <div class="form-group">
-              <input type="email" class="form-control" placeholder="Email" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-
-            <div class="form-group">
-              <textarea class="form-control" placeholder="Message" id="exampleFormControlTextarea1" rows="4"></textarea>
-            </div>
-        
-            <button type="submit" class="btn btn-primary">Send</button>
-          </form>
-        </div>
-
-        <div class="footer-bottom grey-sec text-white text-center p-2">
-          <small>&copy;2020 Eric Mbouwe.</small>
-          <small><a href="https://icons8.com/icon/13930/linkedin">Icons by Icons8</a></small>
-        </div>
-      
-      </footer>
-    </aside>
-
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
