socials icons changed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Full-stack<br />Developer. <br />Passionate<br />&Creative.
       </h1>
       <p class="description">
-        Hi! My name is Eric Mbouwe, earlier at the beginning of my programming
+        Hi! My name is <span class="keyword"><b>@Eric Mbouwe</b></span>, earlier at the beginning of my programming
         journey I was a <span class="keyword"><b>@self-taugh</b></span> programmer, Today I am much better and more
         accomplished. I am a problem solver and my <span class="keyword"><b>@mission</b></span> is to provide the
         best <span class="keyword"><b>@code</b></span class="keyword"> and the best <span
@@ -29,16 +29,16 @@
       <div class="social-links">
         <ul class="d-flex justify-content-start">
           <li>
-            <a href="https://www.linkedin.com/in/ericmbouwe/"><img
-                src="https://img.icons8.com/color/32/000000/linkedin.png" /></a>
+            <a href="https://www.linkedin.com/in/ericmbouwe/" target="blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
           </li>
           <li>
-            <a href="https://github.com/EricMbouwe"><img
-                src="https://img.icons8.com/color/32/000000/github--v1.png" /></a>
+            <a href="https://github.com/EricMbouwe" target="blank"><i class="fa fa-github" aria-hidden="true"></i></a>
           </li>
           <li>
-            <a href="https://twitter.com/EricMbouwe"><img
-                src="https://img.icons8.com/fluent/32/000000/twitter.png" /></a>
+            <a href="https://twitter.com/EricMbouwe" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          </li>
+          <li class="file">
+            <a href="assets/images/" download><i class="fa fa-file-text" aria-hidden="true"></i></a>
           </li>
         </ul>
       </div>
