added resume link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://twitter.com/EricMbouwe" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
           </li>
           <li class="file">
-            <a href="assets/images/" download><i class="fa fa-file-text" aria-hidden="true"></i></a>
+            <a href="assets/images/Resume.pdf" data-toggle="tooltip" data-placement="top" title="Download resume" download><i class="fa fa-file-text" aria-hidden="true"></i></a>
           </li>
         </ul>
       </div>
@@ -157,7 +157,7 @@
 
       <div class="footer-bottom grey-sec text-white text-center p-3">
         <small>&copy;2020 Eric Mbouwe.</small>
-        <small><a href="https://icons8.com/icon/13930/linkedin">Icons by Icons8</a></small>
+        <small><a href="https://icons8.com/icon/13930/linkedin" class="text-white">Design by Charlie Waite</a></small>
       </div>
 
     </footer>
