--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <div class="social-links">
         <ul class="d-flex justify-content-start">
           <li>
-            <a href="https://www.linkedin.com/in/ericmbouwe/" target="blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/ericmbouwe/" target="blank"><i class="fa fa-linkedin"
+                aria-hidden="true"></i></a>
           </li>
           <li>
             <a href="https://github.com/EricMbouwe" target="blank"><i class="fa fa-github" aria-hidden="true"></i></a>
@@ -38,7 +39,8 @@
             <a href="https://twitter.com/EricMbouwe" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
           </li>
           <li class="file">
-            <a href="assets/images/Resume.pdf" data-toggle="tooltip" data-placement="top" title="Download resume" download><i class="fa fa-file-text" aria-hidden="true"></i></a>
+            <a href="assets/images/Resume.pdf" data-toggle="tooltip" data-placement="top" title="Download resume"
+              download><i class="fa fa-file-text" aria-hidden="true"></i></a>
           </li>
         </ul>
       </div>
@@ -60,9 +62,9 @@
           Authentication system, RSpec for Tests and AWS S3 for image storage with Active Storage, Bootstrap 4 for the
           UI.</p>
         <div class="project-links">
-          <a href="" class="live">Demo</a>
+          <a href="https://wotchd.herokuapp.com" class="live" target="blank">Demo</a>
           <span>|</span>
-          <a href="" class="github">Github</a>
+          <a href="https://github.com/EricMbouwe/Wotchd" class="github" target="blank">Github</a>
         </div>
       </div>
     </section>
@@ -79,9 +81,9 @@
           is
           developed with HTML5 and CSS.</p>
         <div class="project-links">
-          <a href="" class="live">Demo</a>
+          <a href="https://mapaan.netlify.com" class="live" target="blank">Demo</a>
           <span>|</span>
-          <a href="" class="github">Github</a>
+          <a href="https://github.com/EricMbouwe/Mapaan" class="github" target="blank">Github</a>
         </div>
       </div>
     </section>
@@ -97,13 +99,11 @@
         <p class="m-0">A tool that allows a beginner to check some syntax errors in a code written in Ruby (.rb files).
           Build with Ruby and RSpec for tests.
         </p>
-        <!-- <p><span>Ruby</span>
-            <span>|</span>
-            <span>RSpec</span></p> -->
+
         <div class="project-links">
-          <a href="" class="live">Demo</a>
+          <a href="https://github.com/EricMbouwe/Ruby-Linter/blob/development/README.md" class="live" target="blank">Demo</a>
           <span>|</span>
-          <a href="" class="github">Github</a>
+          <a href="https://github.com/EricMbouwe/Ruby-Linter" class="github" target="blank">Github</a>
         </div>
       </div>
     </section>
@@ -118,9 +118,10 @@
         <h4 class="project-name">Newsweek</h4>
         <p class="m-0">A clone of The Newsweek homepage build from scratch with HTML & CSS and Bootstrap 4</p>
         <div class="project-links">
-          <a href="" class="live">Demo</a>
+          <a href="https://rawcdn.githack.com/EricMbouwe/Newsweek-clone/85648bf233e0faf9926e5892bb52e0d471b4b6b5/index.html"
+            class="live" target="blank">Demo</a>
           <span>|</span>
-          <a href="" class="github">Github</a>
+          <a href="https://github.com/EricMbouwe/Newsweek-clone" target="blank" class="github">Github</a>
         </div>
       </div>
     </section>
@@ -129,7 +130,8 @@
       <h4 class="articles font-weight-bold mb-4">ARTICLES</h4>
       <hr>
       <small class="article_date d-block">20/05/2020</small>
-      <a href="" class="article_title text-black">CSS, take control</a>
+      <a href="https://hackernoon.com/css-basics-how-to-take-a-control-gm6k3vxd" class="article_title text-black"
+        target="blank">CSS Basics: How To Take A Control</a>
       <hr>
     </section>
 
