flex remove on body for tablet size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Portfolio</title>
 </head>
 
-<body class="d-md-flex">
+<body class="d-lg-flex">
   <main class="">
     <div class="about-content">
       <h1 class="title font-weight-bold">
@@ -56,7 +56,7 @@
       </div>
 
       <div class="project-desc pl-md-3">
-        <h4 class="project-name">Wotchd</h4>
+        <h4 class="project-name pt-1">Wotchd</h4>
         <p class="m-0">Wotchd is an app that helps you to collect your hours spent on watching your entertainement TV
           Shows. It is developed entirely with Ruby on Rails using a custum
           Authentication system, RSpec for Tests and AWS S3 for image storage with Active Storage, Bootstrap 4 for the
