added images for project 3 and 4

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       </h1>
       <p class="description">
         Hi! My name is <span class="keyword"><b>@Eric Mbouwe</b></span>, earlier at the beginning of my programming
-        journey I was a <span class="keyword"><b>@self-taugh</b></span> programmer, Today I am much better and more
-        accomplished. I am a problem solver and my <span class="keyword"><b>@mission</b></span> is to provide the
+        journey I was a <span class="keyword"><b>@self-taugh</b></span> programmer, Today I am more
+        accomplished. I am a problem solver, my favorite <span class="keyword"><b>@stack</b></span> is <span
+          class="keyword"><b>Rails</b></span><span class="keyword">|</span><span class="keyword"><b>React
+            & Redux</b></span> and my <span class="keyword"><b>@mission</b></span> is to provide the
         best <span class="keyword"><b>@code</b></span class="keyword"> and the best <span
-          class="keyword"><b>@behaviour</b></span> that any company could need.<br />
-        Follow my work, words and photos below.
+          class="keyword"><b>@attitude</b></span> that any company could need.<br />
+        Follow my work and words below.
       </p>
       <div class="social-links">
         <ul class="d-flex justify-content-start">
@@ -52,14 +54,15 @@
     <section class="project-mobile blue-sec d-md-flex align-items-center">
       <div class="image d-flex flex-column">
         <small class="order d-block">.001</small>
-        <img src="assets/images/muck11.png" alt="" class="img-fluid" />
+        <img src="assets/images/wotchd3.png" alt="" class="img-fluid" />
       </div>
 
       <div class="project-desc pl-md-3">
         <h4 class="project-name pt-1">Wotchd</h4>
         <p class="m-0">Wotchd is an app that helps you to collect your hours spent on watching your entertainement TV
-          Shows. It is developed entirely with Ruby on Rails using a custum
-          Authentication system, RSpec for Tests and AWS S3 for image storage with Active Storage, Bootstrap 4 for the
+          Shows. It is developed entirely with <b>Ruby on Rails</b> using a custum
+          Authentication system, <b>RSpec</b> for Tests and <b>AWS S3</b> for image storage with Active Storage,
+          <b>Bootstrap 4</b> for the
           UI.</p>
         <div class="project-links">
           <a href="https://wotchd.herokuapp.com" class="live" target="blank">Demo</a>
@@ -72,14 +75,14 @@
     <section class="project-mac d-md-flex red-sec align-items-center">
       <div class="image">
         <small class="order d-block">.002</small>
-        <img src="assets/images/muck8.png" alt="" class="img-fluid" />
+        <img src="assets/images/mapaan.png" alt="" class="img-fluid" />
       </div>
 
       <div class="project-desc">
         <h4 class="project-name">Mapaan</h4>
         <p class="m-0">Mapaan is an online tool that allow people to find their favorite event that they can attend.It
           is
-          developed with HTML5 and CSS.</p>
+          developed with <b>HTML5</b> and <b>CSS</b>.</p>
         <div class="project-links">
           <a href="https://mapaan.netlify.com" class="live" target="blank">Demo</a>
           <span>|</span>
@@ -97,11 +100,12 @@
       <div class="project-desc">
         <h4 class="project-name">Linter</h4>
         <p class="m-0">A tool that allows a beginner to check some syntax errors in a code written in Ruby (.rb files).
-          Build with Ruby and RSpec for tests.
+          Build with <b>Ruby</b> and <b>RSpec</b> for tests.
         </p>
 
         <div class="project-links">
-          <a href="https://github.com/EricMbouwe/Ruby-Linter/blob/development/README.md" class="live" target="blank">Demo</a>
+          <a href="https://github.com/EricMbouwe/Ruby-Linter/blob/development/README.md" class="live"
+            target="blank">Demo</a>
           <span>|</span>
           <a href="https://github.com/EricMbouwe/Ruby-Linter" class="github" target="blank">Github</a>
         </div>
@@ -111,12 +115,13 @@
     <section class="project-mac d-md-flex green-sec align-items-center">
       <div class="image">
         <small class="order d-block">.004</small>
-        <img src="assets/images/muck8.png" alt="" class="img-fluid" />
+        <img src="assets/images/newsweek.png" alt="" class="img-fluid" />
       </div>
 
       <div class="project-desc">
         <h4 class="project-name">Newsweek</h4>
-        <p class="m-0">A clone of The Newsweek homepage build from scratch with HTML & CSS and Bootstrap 4</p>
+        <p class="m-0">A clone of The Newsweek homepage build from scratch with <b>HTML & CSS</b> and <b>Bootstrap 4</b>
+        </p>
         <div class="project-links">
           <a href="https://rawcdn.githack.com/EricMbouwe/Newsweek-clone/85648bf233e0faf9926e5892bb52e0d471b4b6b5/index.html"
             class="live" target="blank">Demo</a>
