linter image added

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section class="project-mac d-md-flex grey-sec align-items-center">
       <div class="image">
         <small class="order d-block">.003</small>
-        <img src="assets/images/muck8.png" alt="" class="img-fluid" />
+        <img src="assets/images/linter.png" alt="" class="img-fluid" />
       </div>
 
       <div class="project-desc">
