added a gmail link to contact button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </li>
         </ul>
       </div>
-      <a class="hello-btn d-block" href="#contact">Get in Touch!</a>
+      <a class="hello-btn d-block" href="mailto:ericmbouwe@gmail.com" target="blank">Get in Touch!</a>
     </div>
   </main>
 
