added padding top to linter image

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <img src="assets/images/linter.png" alt="" class="img-fluid" />
       </div>
 
-      <div class="project-desc">
+      <div class="project-desc pt-2">
         <h4 class="project-name">Linter</h4>
         <p class="m-0">A tool that allows a beginner to check some syntax errors in a code written in Ruby (.rb files).
           Build with <b>Ruby</b> and <b>RSpec</b> for tests.
