newsweek link changed

--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
         <p class="m-0">A clone of The Newsweek homepage build from scratch with <b>HTML & CSS</b> and <b>Bootstrap 4</b>
         </p>
         <div class="project-links">
-          <a href="https://rawcdn.githack.com/EricMbouwe/Newsweek-clone/85648bf233e0faf9926e5892bb52e0d471b4b6b5/index.html"
-            class="live" target="blank">Demo</a>
+          <a href="https://newsweeks.netlify.app" class="live" target="blank">Demo</a>
           <span>|</span>
           <a href="https://github.com/EricMbouwe/Newsweek-clone" target="blank" class="github">Github</a>
         </div>
