--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173632935-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-173632935-1');
+  </script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -21,10 +31,10 @@
       <p class="description">
         Hi! My name is <span class="keyword"><b>@Eric Mbouwe</b></span>, earlier at the beginning of my programming
         journey I was a <span class="keyword"><b>@self-taugh</b></span> programmer, Today I am more
-        accomplished. I am a problem solver, my favorite <span class="keyword"><b>@stack</b></span> is <span
+        accomplished. I am a problem solver and my favorite <span class="keyword"><b>@stack</b></span> is <span
           class="keyword"><b>Rails</b></span><span class="keyword">|</span><span class="keyword"><b>React
-            & Redux</b></span> and my <span class="keyword"><b>@mission</b></span> is to provide the
-        best <span class="keyword"><b>@code</b></span class="keyword"> and the best <span
+            & Redux</b></span>. My <span class="keyword"><b>@mission</b></span> is to provide the
+        best <span class="keyword"><b>@technical skills</b></span class="keyword"> and the best <span
           class="keyword"><b>@attitude</b></span> that any company could need.<br />
         Follow my work and words below.
       </p>
