changed linter description

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           class="keyword"><b>@attitude</b></span> that any company could need.<br />
         Follow my work and words below.
       </p>
+
       <div class="social-links">
         <ul class="d-flex justify-content-start">
           <li>
@@ -69,7 +70,7 @@
 
       <div class="project-desc pl-md-3">
         <h4 class="project-name pt-1">Wotchd</h4>
-        <p class="m-0">Wotchd is an app that helps you to collect your hours spent on watching your entertainement TV
+        <p class="m-0">Wotchd is an app that helps you to track and collect your hours spent on watching your entertainment TV
           Shows. It is developed entirely with <b>Ruby on Rails</b> using a custum
           Authentication system, <b>RSpec</b> for Tests and <b>AWS S3</b> for image storage with Active Storage,
           <b>Bootstrap 4</b> for the
@@ -90,7 +91,7 @@
 
       <div class="project-desc">
         <h4 class="project-name">Mapaan</h4>
-        <p class="m-0">Mapaan is an online tool that allow people to find their favorite event that they can attend.It
+        <p class="m-0">Mapaan is an online tool that allows people to find their favorite event that they can attend.It
           is
           developed with <b>HTML5</b> and <b>CSS</b>.</p>
         <div class="project-links">
@@ -109,7 +110,9 @@
 
       <div class="project-desc pt-2">
         <h4 class="project-name">Linter</h4>
-        <p class="m-0">A tool that allows a beginner to check some syntax errors in a code written in Ruby (.rb files).
+        <p class="m-0">A tool that will scan your code written in Ruby (.rb files) with a set of style rules and will
+          report any errors to you that
+          it find.
           Build with <b>Ruby</b> and <b>RSpec</b> for tests.
         </p>
 
